fix: enable go-to-tags button in tag pages + don't show tags button on small screens
not sure why I didn't enable tag button here before, but just left a comment lol

--- a/assets/scss/_layouts.scss
+++ b/assets/scss/_layouts.scss
@@ -61,6 +61,10 @@
     i {
         color: var(--main-text-color);
     }
+
+    @include media-breakpoint-up(lg) {
+        display: none !important; // Requires !important because jquery fadeIn fadeOut modifies display.
+    }
 }
 
 // --- Sticky Components --- //
